--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,30 +3,25 @@
 <head>
 	<script src="options.js"></script>
 	<link rel="stylesheet" type="text/css" href="options.css">
+	<meta charset="utf-8"/>
 	<title></title>
-
-
-	<h1> Ki Options </h1>
+	<h1> Ki Options / キ オプション</h1>
 </head>
 <body>
-
+	<div id= "table-outer" spellcheck="false">
 	<table id = "keywordTable">
 		<tr>
 			<th>English</th>
-			<th>Translations</th>
+			<th class = "translation-column">Translations</th>
+			<th class = "delete-column"></th>
 		</tr>
 	</table>
 
-	<button id = "save-button" >Save Dictionary Changes</button>
-
-	<span class = "translation-outer">
-
-		<span id = "enteredWords" class = "keyword-container"></span>
-		<input type = "text" id = "translationaddbox">
-
-
-	</span>
-
+	<div id = "save-add">
+		<button id = "add-button" >Add New Keyword</button>
+		<button id = "save-button" >Save Dictionary Changes</button>
+	</div>
+	<div>
 </div>
 </body>
 </html>
