--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,6 +27,10 @@
 	</div>
 	<br>
 
+	<div class = "cleardictionary">
+		<input id = "clearButton" type="submit" value="Clear Dictionary">
+	</div>
+
 	<div class = translate>
 	Translate:<br>
 	<input type="text" id="qbox"><br>
