added saved searches feature(copy via popup), implemented context menu handlers, made options page table scrollable

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,51 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>This is a popup</title>
 	<script src="popup.js"></script>
 	<link rel="stylesheet" type="text/css" href="popup.css">
+	<meta charset="utf-8"/>
+	<title></title>
+
+	<h2>Saved Searches / 保存した検索</h1>
 </head>
 <body>
-
-
-	<div class = "newkeyword">
-		Add Keyword:
-	<form name ="form1" id = "form1" action="">
-		<input type="text" id="ename"><br>
-		<input type="text" id="jwords"><br>
-		<input id = "addButton" type="submit" value="Add Keyword">
-	</form>
+	<div id= "searches-outer" >
 	</div>
-	<br>
-
-	<div class = "deletekeyword">
-		Remove Keyword:
-	<form name ="form2" id = "form2" action="">
-		<input type="text" id="deletename"><br>
-		<input id = "deleteButton" type="submit" value="Delete">
-	</form>
-	</div>
-	<br>
-
-	<div class = "cleardictionary">
-		<input id = "clearButton" type="submit" value="Clear Dictionary">
-	</div>
-
-	<div class = translate>
-	Translate:<br>
-	<input type="text" id="qbox"><br>
-
-	<input id = "transButton" type="submit" value="Translate">
-	</div>
-
-	<br>
-	<br>
-
-	<div id = "getDictionary">
-		<input id = "getButton" type="submit" value="Get Dictionary"><br>
-		<div id = "dictionaryPrint"><div>
-	</div>
-
-
 </body>
 </html>
