--- a/src/options/options.html
+++ b/src/options/options.html
@@ -8,20 +8,29 @@
 	<h1> Ki Options / キ オプション</h1>
 </head>
 <body>
-	<div id= "table-outer" spellcheck="false">
-	<table id = "keywordTable">
-		<tr>
-			<th>English</th>
-			<th class = "translation-column">Translations</th>
-			<th class = "delete-column"></th>
-		</tr>
-	</table>
+
+	<div class= "header-outer">
+		<table class = "table-header">
+			<tr>
+				<th>English</th>
+				<th class = "translation-column">Translations</th>
+				<th class = "delete-column">&#x2a2f;</th>
+			</tr>
+
+		</table>
+	</div>
+	<div class= "table-outer" spellcheck="false">
+
+		<table id = "keywordTable">
+
+			<tbody></tbody>
+
+		</table>
+	</div>
 
 	<div id = "save-add">
-		<button id = "add-button" >Add New Keyword</button>
-		<button id = "save-button" >Save Dictionary Changes</button>
-	</div>
-	<div>
-</div>
+			<button id = "add-button" >Add New Keyword</button>
+			<button id = "save-button" >Save Dictionary Changes</button>
+		</div>
 </body>
 </html>
